--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 斯樵工坊
-subtitle: ''
-description: ''
-keywords:
+title: '斯樵工坊'
+subtitle: '生命不息，奋斗不止！'
+description: '斯樵工坊'
+keywords: '斯樵工坊'
 author: 斯樵
-language: zh-Hans
-timezone: ''
+language: en
+timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://sqstudio.com
+url: https://sqstudio.com
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -62,7 +62,7 @@ prismjs:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 5
   order_by: -date
 
 # Category & Tag
@@ -90,7 +90,7 @@ pagination_dir: page
 
 # Include / Exclude file(s)
 ## include:/exclude: options only apply to the 'source/' folder
-include:
+include: CNAME / about
 exclude:
 ignore:
 
@@ -104,4 +104,4 @@ theme: landscape
 deploy:
   type: git
   repository: git@github.com:Sqstudio/sqstudio.github.io.git
-  branch: master
+  branch: blog
