--- a/_config.yml
+++ b/_config.yml
@@ -103,5 +103,5 @@ theme: landscape
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repository: git@github.com:Sqstudio/sqstudio.github.io.git
+  repository: git@mygithub.com:Sqstudio/sqstudio.github.io.git
   branch: blog
